[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Themes/Titlemenuaddition.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ChoixImage.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/PeaberryBase.ttf" type="DynamicFontData" id=7]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/topleft = Color( 0.47451, 0.843137, 0.988235, 1 )
shader_param/topright = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomleft = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomright = Color( 0.627451, 0.807843, 0.827451, 1 )

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=17]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 1
outline_color = Color( 0.121569, 0.027451, 0.027451, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.564706, 0.541176, 0.541176, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.52549, 0.623529, 0.494118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.560784, 0.486275, 0.690196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.670588, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.560784, 0.486275, 0.690196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.670588, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.560784, 0.486275, 0.690196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.670588, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.560784, 0.486275, 0.690196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.670588, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 23
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.956863, 0.952941, 0.521569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.619608, 0.443137, 0.796078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.533333, 0.858824, 0.933333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.956863, 0.952941, 0.521569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=14]
size = 29
extra_spacing_top = 11
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="ShaderMaterial" id=22]

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[node name="ChoixImage" type="Control"]
anchor_left = 0.296
anchor_top = 0.204
anchor_right = 0.296
anchor_bottom = 0.204
margin_left = -304.104
margin_top = -121.4
margin_right = -264.104
margin_bottom = -81.4
script = ExtResource( 6 )

[node name="ColorRect" type="Panel" parent="."]
material = SubResource( 3 )
anchor_left = 7.6
anchor_top = 4.175
anchor_right = 7.6
anchor_bottom = 4.175
margin_left = 20.0
margin_top = -117.0
margin_right = 420.0
margin_bottom = 333.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 17 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 333.0
margin_top = 55.0
margin_right = 721.0
margin_bottom = 90.0
custom_colors/default_color = Color( 0.964706, 0.952941, 0.513726, 1 )
custom_fonts/normal_font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
visible_characters = 300
text = "Choisissez votre dessin"

[node name="Image1" type="Button" parent="."]
margin_left = 330.0
margin_top = 103.0
margin_right = 522.0
margin_bottom = 293.0
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 18 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Image1"]
margin_right = 192.0
margin_bottom = 188.0

[node name="Image2" type="Button" parent="."]
margin_left = 527.0
margin_top = 103.0
margin_right = 719.0
margin_bottom = 292.0
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 19 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Image2"]
margin_right = 191.0
margin_bottom = 188.0

[node name="Image3" type="Button" parent="."]
margin_left = 330.0
margin_top = 303.0
margin_right = 522.0
margin_bottom = 493.0
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Image3"]
margin_right = 196.0
margin_bottom = 188.0

[node name="Image4" type="Button" parent="."]
margin_left = 527.0
margin_top = 303.0
margin_right = 719.0
margin_bottom = 493.0
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 21 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Image4"]
margin_right = 191.0
margin_bottom = 191.0

[node name="OKButton" type="Button" parent="."]
margin_left = 471.0
margin_top = 273.0
margin_right = 577.0
margin_bottom = 328.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )

[node name="DancingOk" type="RichTextLabel" parent="OKButton"]
margin_left = 32.0
margin_top = 4.0
margin_right = 87.0
margin_bottom = 53.0
mouse_filter = 2
theme = SubResource( 15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Ok"
text = "Ok"

[node name="exitButton" type="Button" parent="."]
material = SubResource( 22 )
margin_left = 699.0
margin_top = 53.0
margin_right = 751.0
margin_bottom = 131.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
text = "X"

[connection signal="pressed" from="Image1" to="." method="_on_Image1_pressed"]
[connection signal="pressed" from="Image2" to="." method="_on_Image2_pressed"]
[connection signal="pressed" from="Image3" to="." method="_on_Image3_pressed"]
[connection signal="pressed" from="Image4" to="." method="_on_Image4_pressed"]
[connection signal="mouse_entered" from="OKButton" to="." method="_on_OKButton_mouse_entered"]
[connection signal="mouse_exited" from="OKButton" to="." method="_on_OKButton_mouse_exited"]
[connection signal="pressed" from="OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
